<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F191B1"
    tools:context=".Login">




        <TextView
            android:id="@+id/loginlayout"
            android:layout_width="274dp"
            android:layout_height="61dp"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24sp"

            app:layout_constraintBottom_toTopOf="@id/textInputLayout_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911"
            tools:text="Login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="140dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emaill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_user"

                android:drawableRight="@drawable/ic_user" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_id"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_pass"
                android:drawableRight="@drawable/ic_pass"


                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnlogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginLeft="10dp"
            android:text="login"
            android:textColor="#090909"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_password" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="136dp"
            android:layout_height="41dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="forgotpass"
            android:textAlignment="textEnd"
            android:textColor="#090808"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnlogin"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="167dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnlogin"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/haveaccount"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="new_user"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_password"
            tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/register"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="register"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password"
        tools:ignore="RtlCompat" />




</androidx.constraintlayout.widget.ConstraintLayout>
